# fast_asgi

./: .gitignore  README.md  docker-compose.yml  dockerNeeeds.ini  nginx.conf
Backend/: backend.dockerfile
Backend/app/: Dockerfile  Pipfile  app.py  backend.dockerfile  backend_pre_start.py  dependencies.txt  gunicorn_conf.py  initial_data.py  main.py  pyproject.toml  requirements.txt  start.sh
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 0ad3e487a0ab_.py  0bd4a5bc79f4_.py  1413344d1ad1_scopes.py  340182b50a66_.py  4112396ac35b_token_model.py  59d9274c6164_initial_fixed.py  5f01e6feb3a1_create_user_table.py  744a93527ecc_posts.py  7fa2bc43dd98_toke.py  972f56cb6cd8_initial.py  a1db61990904_without_autogenerate.py  a3d0c4085151_.py  b70e5a05df9c_.py  b7eb5b42bd40_.py  c2619ba08c9b_first_revision.py  cf7960e7eca4_.py  da3a0c2b7759_.py  e7f79bf5522c_without_autogenerate.py  edb1a278946c_.py
Backend/app/apps/: base_router.py  components.py  routers.py
Backend/app/apps/cookie_auth_blog/: auth_router.py  auth_service.py  basic_authentication.py
Backend/app/configurations/: .pgadmin.env  gunicorn_conf.py  nginx.conf  settings_env.py
Backend/app/core/: base_crud.py  base_listener.py  base_router.py  base_settings.py
Backend/app/events/: emmiters.py  events.py
Backend/app/my_tests/: authorization_server_test.py  pydc.py
Backend/app/services/: CryptContext.ini  base_dal.py  database.py  db_service.py  email_service.py  errors.py  exception_services.py  init_db.py  paginator.py  password_service.py  scopes.py  security.py  security_service.py
Backend/app/tests/: decorator_tess.py
Backend/app/utils/: cors_middleware.py  email_utils.py  emails_test.py  env_writer.py
(+103 files in other folders)
